--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -5,8 +5,15 @@
 .name-input {
   height: 50px;
   font-size: 24px;
+  width: 390px;
 }
 label {
   display: flex;
   flex-direction: column;
+}
+.submit-btn {
+  margin-top: 20px;
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
 }
